# morse-key-ble-bridge

./: .gitignore  LICENSE  README.md  west.yml
apps/bridge/: CMakeLists.txt  prj.conf
apps/bridge/src/: main.c
